# ml-harness

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  load-env.ps1  main.py  pyproject.toml  scratchpad.md
apps/: fx_local_vol_regression_latent_history_suite_run.py  fx_local_vol_regression_run.py  fx_local_vol_regression_suite_run.py  fx_rv_regression_run.py  fx_rv_regression_suite_run.py  hmm_fx_daily_run.py  iris_run.py  smoke_run.py  yaml_run.py
core/src/core/: api.py  configuration.py
core/src/core/contracts/: __init__.py  plugin.py  registry.py  run_context.py  run_result.py  tracking.py
core/src/core/contracts/plugin_contracts/: __init__.py  configurable_plugin.py  plugin.py  registry.py
core/src/core/contracts/run_contracts/: __init__.py  run_config.py  run_context.py  run_spec.py  sweep_config.py  sweep_result.py
core/src/core/orchestration/: registry.py
core/src/core/runtime/: __init__.py  artifacts.py
core/src/core/testkit/: __init__.py  dummies.py
core/src/core/tracking/: __init__.py  fakes.py  mlflow_client.py
core/tests/: test_api_contracts.py  test_api_pipeline_lifecycle.py  test_api_yaml_configs.py  test_registry_injection.py  test_run_context.py  test_runtime_artifacts.py  test_tracking_fake.py  test_tracking_mlflow_client.py
deploy/: Dockerfile.app  Dockerfile.mlflow  docker-compose-fullstack.yml  docker-compose-local-app.yml  docker-compose.yml
docs/: AGENTS.md  INDEX.md  MILESTONE_2.md  PLUGIN_CONVENTIONS.md  STYLEGUIDE.md  TODO_ARTIFACT_LAYOUT.md
docs/datasets/: DATASETS.md
docs/milestones/: MILESTONE_3.md
docs/plugins/: LOCAL_VOL_PLUGIN_BOOTSTRAP.md  PLUGIN_CONFIG.md
plugins/fx_local_vol_regression/: README.md  __init__.py  artifacts.py  config.py  data.py  default_config.yaml  eval.py  plugin.py  train.py
plugins/fx_rv_regression/: README.md  __init__.py  artifacts.py  config.py  data.py  default_config.yaml  eval.py  plots.py  plugin.py  train.py
plugins/hmm_fx_daily/: README.md  __init__.py  artifacts.py  config.py  data.py  default_params.yaml  eval.py  plots.py  plugin.py  train.py
plugins/iris_classification/: __init__.py  artifacts.py  config.py  data.py  default_params.yaml  eval.py  plugin.py  train.py
plugins/smoke_test/: __init__.py
reports/: fx_geom_ignite_local_suite_report.txt  fx_local_latent_history_brief_review.txt
tests/: test_iris_plugin.py  test_plugin_params_contracts.py  test_tracking_mlflow_client.py
tracking_clients/: __init__.py
tracking_clients/mlflow_clients/: mlflow_client.py
